feat: aplicacion terminada

--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,9 @@
 			<div class="container">
 				<p class="paragraph">The Bored APP helps you find things to do when you're bored.</p>
 				<div class="activity-container">
-					<button type="submit" id="enviar" class="boton">Find activities</button>
-					<h4 class="copy">or</h4>
+					<h4 class="copy">Search activities:</h4>
 					<select name="activity" id="activity-select" class="activity-select">
-						<option value="">Select an activity</option>
+						<option value="">Any activity</option>
 						<option value="education">Education</option>
 						<option value="recreational">Recreational</option>
 						<option value="social">Social</option>
@@ -33,6 +32,7 @@
 						<option value="music">Music</option>
 						<option value="busywork">Busywork</option>
 					</select>
+					<button type="submit" id="enviar" class="boton">Search</button>
 				</div>
 				<div id="result"></div>
 			</div>
